--- a/build.gradle
+++ b/build.gradle
@@ -24,37 +24,39 @@ repositories {
 }
 
 configurations {
-    checksytleOverride
-}
-
-tasks.withType(Checkstyle) {
-    checkstyleClasspath = project.configurations.checksytleOverride
-    reports {
-        html.enabled = true
-    }
 }
 
 dependencies {
-		checksytleOverride('com.puppycrawl.tools:checkstyle:6.11.2')
+    compile 'org.slf4j:slf4j-api:1.7.13'
 
-		compile 'org.slf4j:slf4j-api:1.7.13'
+    compile 'com.loginbox.mybatis:dropwizard-mybatis:1.2.1'
+    compile 'org.mybatis:mybatis:3.3.0'
+    compile 'org.mybatis:mybatis-guice:3.7.1'
     compile 'com.google.inject:guice:4.0'
+    compile 'mysql:mysql-connector-java:6.0.6'
+
+    compile 'tw.hyl.common:jersey-jodatime:1.0.0'
+    compile 'commons-io:commons-io:2.4'
+
     compile 'io.dropwizard:dropwizard-core:0.9.2'
     compile 'io.dropwizard:dropwizard-auth:0.9.2'
     compile 'io.dropwizard:dropwizard-assets:0.9.2'
     compile 'io.dropwizard:dropwizard-forms:0.9.2'
-    compile 'com.loginbox.mybatis:dropwizard-mybatis:1.2.1'
-		compile 'io.dropwizard.modules:dropwizard-java8:0.9.0-1'
-		compile 'com.github.toastshaman:dropwizard-auth-jwt:0.9.1-1'
-		compile 'tw.hyl.common:jersey-jodatime:1.0.0'
+    compile 'io.dropwizard:dropwizard-db:0.9.2'
+    compile 'io.dropwizard:dropwizard-jdbi:0.9.2'
+    compile 'io.dropwizard.modules:dropwizard-java8:0.9.0-1'
+    compile 'de.thomaskrille:dropwizard-template-config:1.1.0'
+
+    compile 'com.github.toastshaman:dropwizard-auth-jwt:0.9.1-1'
+
+    compile name: 'mybatis-jackson-0.4.2'
     compile name: 'ojdbc14-10.2.0.4.0'
-    compile name: 'AthenaJDBC41-1.0.0'
-		compile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
+    compile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.1'
-		testCompile 'io.dropwizard:dropwizard-testing:0.9.1'
-		testCompile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
+    testCompile 'io.dropwizard:dropwizard-testing:0.9.1'
+    testCompile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
 }
