添加需要内置安装的jar包

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,14 @@
 
 ### Java ###
 *.class
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
+*.jar
 *.nar
 *.ear
 *.zip
